log/build_2023-02-02_11-58-47/colreg_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/filip/ros2_ws/install/colreg_package/lib/python3.10/site-packages/colreg_package/turtle_positioning.py", line 45
    self.call_service_spawn(positions[i][0], positions[i][1], positions[i][2)
                                                                            ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

